--- a/src/app/features/po/initiate-po/initiate-po.component.html
+++ b/src/app/features/po/initiate-po/initiate-po.component.html
@@ -4,7 +4,7 @@
             <div class="col-xs-6"></div>
             <div class="col-xs-6"></div>
         </div>
-        <mat-horizontal-stepper [linear]="true" #stepper class="custom-stepper custom-header-height p-t-25">
+        <mat-horizontal-stepper [linear]="true" #stepper>
             <mat-step stepControl="stepOne">
                 <ng-template matStepLabel>Select Supplier</ng-template>
                 <app-po-supplier (selectedSupplier)="getSupplier($event)"></app-po-supplier>
