--- a/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
+++ b/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
@@ -20,10 +20,11 @@
                             <mat-icon>search</mat-icon>
                         </button>
                     </div>
-                    <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'"  [value]="project" >
+                    <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'"
+                        [value]="project">
                         <span>
-                                {{ project.projectName }}
-                            </span>
+                            {{ project.projectName }}
+                        </span>
                     </mat-option>
                 </mat-select>
             </mat-form-field>
@@ -46,7 +47,9 @@
                     <th mat-header-cell *matHeaderCellDef>Material Name</th>
                     <td mat-cell *matCellDef="let element;let i=index" formGroupName={{i}}>
                         <mat-checkbox #ch (change)="materialChecked(ch,i,element)">
-                            {{ element.materialName }}
+                            <div class="limited-character" matTooltip=" {{ element.materialName }}">
+                                {{ element.materialName }} <br>
+                            </div>
                         </mat-checkbox>
                     </td>
                 </ng-container>
@@ -55,21 +58,21 @@
                 <ng-container matColumnDef="Required Date">
                     <th mat-header-cell *matHeaderCellDef>Required Date</th>
                     <td mat-cell *matCellDef="let element; let i = index">
-                        {{ element.dueDate }}
+                        {{ element.dueDate|date: "dd-MMM-yyy" }}
                     </td>
                 </ng-container>
                 <!-- Name Column -->
                 <ng-container matColumnDef="Requested Quantity">
                     <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.requestedQty }}
+                        {{ element.requestedQty }} <span class="p-l-5">{{element.materialUnit}}</span>
                     </td>
                 </ng-container>
                 <!-- Name Column -->
                 <ng-container matColumnDef="Estimated Quantity">
                     <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.estimatedQty }}
+                        {{ element.estimatedQty }} <span class="p-l-5">{{element.materialUnit}}</span>
                     </td>
                 </ng-container>
 
