--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -23,25 +23,29 @@
                     <ng-container matColumnDef="Material Name">
                         <th mat-header-cell *matHeaderCellDef>Material Name</th>
                         <td mat-cell *matCellDef="let element">
-                            {{ element.materialName }}
+                            <div class="limited-character" matTooltip=" {{ element.materialName }}">
+                                {{ element.materialName }} <br>
+                            </div>
                         </td>
                     </ng-container>
 
                     <ng-container matColumnDef="Required Date">
                         <th mat-header-cell *matHeaderCellDef>Required Date</th>
                         <td mat-cell *matCellDef="let element; let i = index">
-                            {{ element.dueDate }}
+                            {{ element.dueDate|date: "dd-MMM-yyy"  }}
                         </td>
                     </ng-container>
                     <!-- Name Column -->
                     <ng-container matColumnDef="Requested Quantity">
-                        <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
-                        <td mat-cell *matCellDef="let element">{{ element.requestedQty }}</td>
+                        <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
+                        <td mat-cell *matCellDef="let element">{{ element.requestedQty }} <span
+                                class="p-l-5">{{element.materialUnit}}</span></td>
                     </ng-container>
                     <!-- Name Column -->
                     <ng-container matColumnDef="Estimated Quantity">
-                        <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
-                        <td mat-cell *matCellDef="let element">{{ element.estimatedQty }}</td>
+                        <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
+                        <td mat-cell *matCellDef="let element">{{ element.estimatedQty }} <span
+                                class="p-l-5">{{element.materialUnit}}</span></td>
                     </ng-container>
                     <!-- estimated rate -->
                     <ng-container matColumnDef="Estimated Rate">
