--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form">
+<form *ngIf="allProjects" [formGroup]="form">
     <div class="row p-b-10">
         <div class="col-sm-12">
             <mat-form-field class="border-select pull-right m-r-25">
