--- a/src/app/shared/dialogs/selectPoApprover/selectPo.html
+++ b/src/app/shared/dialogs/selectPoApprover/selectPo.html
@@ -1,4 +1,5 @@
 <div>
+    <h1 mat-dialog-title>Select Purchase Order Approver</h1>
     <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group"
         [(ngModel)]="selectedApprover">
         <div *ngFor="let approver of approverData">
@@ -10,8 +11,8 @@
     </mat-radio-group>
     <div class="m-0-auto send-btn-select-po">
         <button mat-raised-button class="main-background-color main-button color-white" (click)="sendPo()">
-        Send
-    </button>
+            Send
+        </button>
     </div>
-    
+
 </div>
