--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -1,12 +1,10 @@
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
-
     <form *ngIf="rfqProjects.length" (ngSubmit)="allocateQuantity()" [formGroup]="rfqForms">
       <div class="row p-t-10 p-b-10">
         <div class="col-sm-12">
           <span>
-            <button mat-raised-button class="main-background-color main-button color-white pull-right"
-              [disabled]="!getFormValidation()">
+            <button mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="!getFormValidation()">
               Allocate Quantity
             </button>
           </span>
@@ -19,8 +17,12 @@
               <mat-expansion-panel class="mat-expansion-panel-body" class="myPanel" [expanded]="true">
                 <mat-expansion-panel-header class="row">
                   <section matSort class="mat-elevation-z2">
-                    <span mat-sort-header="vesselName">{{ project.projectName }}<span
-                        class="p-l-5">{{ project.addressLine1 }}</span></span>
+                    <span
+                      >{{ project.projectName
+                      }}<span class="p-l-5"
+                        >{{ project.addressLine1 }} ,{{ project.addressLine2 }} {{ project.city }} {{ project.pincode }} {{ project.state }} {{ project.country }}
+                      </span></span
+                    >
                   </section>
                 </mat-expansion-panel-header>
                 <div>
@@ -31,13 +33,10 @@
                   </section>
                 </div>
                 <ng-container formArrayName="materialList">
-                  <mat-expansion-panel class="p-0" *ngFor="let material of project.materialList; let m = index"
-                    [formGroupName]="m">
-                    <mat-expansion-panel-header class="mat-row">
+                  <div class="p-0" *ngFor="let material of project.materialList; let m = index" [formGroupName]="m">
+                    <section class="mat-row rfqbid-header-color">
                       <span class="col-xs-2">
-                        <div class="limited-character" matTooltip=" {{ material.materialName }}">
-                          {{ material.materialName }} <br>
-                        </div>
+                        <div class="limited-character" matTooltip=" {{ material.materialName }}">{{ material.materialName }} <br /></div>
                       </span>
                       <span class="col-xs-2"> {{ material.rfqMaterialQty }} </span>
                       <ng-container *ngFor="let brand of material.brandNames">
@@ -47,39 +46,28 @@
                         <span class="col-xs-1">
                           Supplier Rates
                         </span>
-                        <span class="col-xs-1"></span>
                       </ng-container>
+                    </section>
 
-                    </mat-expansion-panel-header>
-
-                    <span formArrayName="supplierList">
-                      <div class="mat-row supplierLevel" *ngFor="
-                          let supplier of material.supplierList;
-                          let s = index
-                        " [formGroupName]="s">
-                        <span class="col-xs-2 ">{{ supplier.supplierName }}
-                        </span>
+                    <ng-container formArrayName="supplierList">
+                      <div class="mat-row supplierLevel" *ngFor="let supplier of material.supplierList; let s = index" [formGroupName]="s">
+                        <span class="col-xs-2 ">{{ supplier.supplierName }} </span>
                         <span class="col-xs-2"></span>
-                        <span formArrayName="brandGroup">
-                          <span *ngFor="
-                              let brandInfo of supplier.brandDetailList;
-                              let i = index
-                            " [formGroupName]="i" class="col-xs-3">
-
-                            <span class="col-xs-1 p-l-0">
-                              <mat-form-field class="border-input">
-                                <input type="number" class="quantity p-l-0" matInput formControlName="quantity"
-                                  placeholder="qty" />
-                              </mat-form-field>
-                            </span>
-                            <span
-                              class="col-xs-1">{{ brandInfo.materialUnitPrice != null?brandInfo.materialUnitPrice:"--" }}</span>
-                            <span class="col-xs-1"></span>
-                          </span>
-                        </span>
+                        <ng-container formArrayName="brandGroup">
+                          <ng-container *ngFor="let brandInfo of supplier.brandDetailList; let i = index" [formGroupName]="i">
+                            <div class="col-xs-2 p-l-0 p-r-0">
+                              <span class="col-xs-1 p-l-0 text-left">
+                                <mat-form-field class="border-input">
+                                  <input type="number" class="quantity p-l-0" matInput formControlName="quantity" placeholder="qty" />
+                                </mat-form-field>
+                              </span>
+                              <span class="col-xs-1 p-l-20">{{ brandInfo.materialUnitPrice != null ? brandInfo.materialUnitPrice : "--" }}</span>
+                            </div>
+                          </ng-container>
+                        </ng-container>
                       </div>
-                    </span>
-                  </mat-expansion-panel>
+                    </ng-container>
+                  </div>
                 </ng-container>
               </mat-expansion-panel>
             </mat-accordion>
