user profile changes

--- a/src/app/features/users/add-user/add-user.component.html
+++ b/src/app/features/users/add-user/add-user.component.html
@@ -42,8 +42,8 @@
                                 </div>
     
     
-                                <div class="col-md-4">
-                                    <mat-form-field class="border-select w-100">
+                                <div class="col-md-3">
+                                    <mat-form-field class="border-select w-100 role-input">
                                         <mat-label>Role</mat-label>
                                         <mat-select formControlName="roleId">
                                             <mat-option *ngFor="let role of roles" [value]="role.roleId">
