--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -19,7 +19,7 @@
                   <section matSort class="mat-elevation-z2">
                     <span
                       >{{ project.projectName
-                      }}<span class="p-l-5"
+                      }}<span class="p-l-5 main-color"
                         >{{ project.addressLine1 }} ,{{ project.addressLine2 }} {{ project.city }} {{ project.pincode }} {{ project.state }} {{ project.country }}
                       </span></span
                     >
