--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -1,96 +1,88 @@
 <form *ngIf="checkedMaterialsList" [formGroup]="materialForms">
-    <div class="row ">
-        <div class="col-xs-12 text-right p-b-10">
-            <span>
-                <button mat-raised-button [disabled]="!materialForms.valid" matStepperNext (click)="materialAdded()"
-                    class="main-background-color main-button color-white">
-                    Next
-                </button>
-            </span>
-        </div>
+  <div class="row ">
+    <div class="col-xs-12 text-right p-b-10">
+      <span>
+        <button mat-raised-button [disabled]="!materialForms.valid" matStepperNext (click)="materialAdded()" class="main-background-color main-button color-white">
+          Next
+        </button>
+      </span>
     </div>
-    <mat-accordion class="accordion-padding-zero" formArrayName="forms">
-        <ng-template ngFor let-material [ngForOf]="checkedMaterialsList" let-mati="index">
-            <mat-expansion-panel class="myPanel" [expanded]="true">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        {{material.projectName}}
-                        <!-- <a href="javascript:void(0)" (click)="openDialog(material)"
+  </div>
+  <mat-accordion class="accordion-padding-zero" formArrayName="forms">
+    <ng-template ngFor let-material [ngForOf]="checkedMaterialsList" let-mati="index">
+      <mat-expansion-panel class="myPanel" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{ material.projectName }}
+            <!-- <a href="javascript:void(0)" (click)="openDialog(material)"
                             class="main-color p-l-15">{{material.defaultAddress.addressLine1}}</a> -->
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <table mat-table [dataSource]="material.projectMaterialList" class="mat-elevation-z8 col-sm-12">
-                    <ng-container matColumnDef="Material Name">
-                        <th mat-header-cell *matHeaderCellDef>Material Name</th>
-                        <td mat-cell *matCellDef="let element">
-                            <div class="limited-character" matTooltip=" {{ element.materialName }}">
-                                {{ element.materialName }} <br>
-                            </div>
-                        </td>
-                    </ng-container>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <table mat-table [dataSource]="material.projectMaterialList" class="mat-elevation-z8 col-sm-12">
+          <ng-container matColumnDef="Material Name">
+            <th mat-header-cell *matHeaderCellDef>Material Name</th>
+            <td mat-cell *matCellDef="let element">
+              <div class="limited-character" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
+            </td>
+          </ng-container>
 
-                    <ng-container matColumnDef="Required Date">
-                        <th mat-header-cell *matHeaderCellDef>Required Date</th>
-                        <td mat-cell *matCellDef="let element; let i = index">
-                            {{ element.dueDate|date: "dd-MMM-yyy"  }}
-                        </td>
-                    </ng-container>
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="Requested Quantity">
-                        <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
-                        <td mat-cell *matCellDef="let element">{{ element.requestedQty }} <span
-                                class="p-l-5">{{element.materialUnit}}</span></td>
-                    </ng-container>
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="Estimated Quantity">
-                        <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
-                        <td mat-cell *matCellDef="let element">{{ element.estimatedQty }} <span
-                                class="p-l-5">{{element.materialUnit}}</span></td>
-                    </ng-container>
-                    <!-- estimated rate -->
-                    <ng-container matColumnDef="Estimated Rate">
-                        <th mat-header-cell *matHeaderCellDef>Estimated Rate</th>
-                        <td mat-cell *matCellDef="let element; let i = index">
-                            <mat-form-field
-                                [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))"
-                                class="border-input table-input">
-                                <input matInput formControlName="materialUnitPrice" type="number"
-                                    placeholder="Estimated Rate" />
-                            </mat-form-field>
-                        </td>
-                    </ng-container>
-                    <!-- quantity -->
-                    <ng-container matColumnDef="Quantity">
-                        <th mat-header-cell *matHeaderCellDef>Quantity</th>
-                        <td mat-cell *matCellDef="let element; let  i= index">
-                            <mat-form-field
-                                [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))"
-                                class="border-input table-input">
-                                <input matInput formControlName="materialQty" type="number" placeholder="Quantity" />
-                            </mat-form-field>
-                        </td>
-                    </ng-container>
-                    <!-- makes -->
-                    <ng-container matColumnDef="Makes">
-                        <th mat-header-cell *matHeaderCellDef>Makes</th>
-                        <td mat-cell *matCellDef="let element; let  i= index">
-                            <app-chip
-                                (onUpdate)="makesUpdate($event, (i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0)))">
-                            </app-chip>
-                            <!-- <button mat-button class="display-flex pull-right" (click)="deleteMaterial(i)">
+          <ng-container matColumnDef="Required Date">
+            <th mat-header-cell *matHeaderCellDef>Required Date</th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              {{ element.dueDate | date: "dd-MMM-yyy" }}
+            </td>
+          </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="Requested Quantity">
+            <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.requestedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
+            </td>
+          </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="Estimated Quantity">
+            <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.estimatedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
+            </td>
+          </ng-container>
+          <!-- estimated rate -->
+          <ng-container matColumnDef="Estimated Rate">
+            <th mat-header-cell *matHeaderCellDef>Awarded Rate</th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <mat-form-field [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)" class="border-input table-input">
+                <input matInput formControlName="materialUnitPrice" type="number" placeholder="Awarded Rate" />
+              </mat-form-field>
+            </td>
+          </ng-container>
+          <!-- quantity -->
+          <ng-container matColumnDef="Quantity">
+            <th mat-header-cell *matHeaderCellDef>Quantity</th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <mat-form-field [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)" class="border-input table-input">
+                <input matInput formControlName="materialQty" type="number" placeholder="Quantity" />
+              </mat-form-field>
+            </td>
+          </ng-container>
+          <!-- makes -->
+          <ng-container matColumnDef="Makes">
+            <th mat-header-cell *matHeaderCellDef>Makes</th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <app-chip (onUpdate)="makesUpdate($event, i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0))"> </app-chip>
+              <!-- <button mat-button class="display-flex pull-right" (click)="deleteMaterial(i)">
                     <mat-icon class="main-color">delete_outline</mat-icon>
                 </button> -->
-                        </td>
-                    </ng-container>
+            </td>
+          </ng-container>
 
-                    <!-- Symbol Column -->
+          <!-- Symbol Column -->
 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                </table>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
 
-                <!-- end table part -->
-            </mat-expansion-panel>
-        </ng-template>
-    </mat-accordion>
+        <!-- end table part -->
+      </mat-expansion-panel>
+    </ng-template>
+  </mat-accordion>
 </form>
